Link to original site

--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 
             <p><small>best in firefox or maybe chrome. sorry if yo browser hate this</small></p>
             <h2>URL ANIMATION RENDERING WTF</h2>
+
+            <p>Check out the <a href='http://glench.com/hash'>original</a>.</p>
         </div>
 
         <script src="jquery-1.11.2.min.js"></script>
